class Customer {
private:
    std::string name;

public:
    Customer(const std::string& name);
    std::string getName() const;
};
