classDiagram
    class Game {
        -string title
        -int totalCopies
        -int availableCopies
        +Game(string title, int copies)
        +string getTitle()
        +int getAvailableCopies()
        +void checkoutCopy()
        +void returnCopy()
    }

    class Customer {
        -string name
        +Customer(string name)
        +string getName()
    }

    class Loan {
        -Game* game
        -Customer* customer
        -string dueDate
        +Loan(Game* game, Customer* customer, string dueDate)
        +Game* getGame()
        +Customer* getCustomer()
        +string getDueDate()
    }

    class GameLibrary {
        -vector~Game~ games
        -vector~Loan~ activeLoans
        +void addGame(string title, int copies)
        +void listGames()
        +void checkoutGame(string gameTitle, string customerName, string dueDate)
        +void returnGame(string gameTitle, string customerName)
        +void listLoans()
    }

    GameLibrary --> Game : manages
    GameLibrary --> Loan : tracks
    Loan --> Game : references
    Loan --> Customer : references
